--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@agjs/react-right-click-menu": "^0.0.8",
     "rctx-contextmenu": "^1.4.1",
     "react-contextmenu": "^2.14.0",
     "react-icons": "^4.10.1"
