--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@agjs/react-right-click-menu": "^0.0.8",
     "rctx-contextmenu": "^1.4.1",
     "react-contextmenu": "^2.14.0",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "use-context-menu": "^0.4.12"
   }
 }
