--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@nextui-org/react": "^2.0.3",
+    "framer-motion": "^10.15.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2"
   }
