--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
     "framer-motion": "^10.15.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27"
   }
 }
